feature: swagger api/v0 foo demo
1. add vscode snippets for file license
2. add license for all go file
3. add basic context for app
4. add more middleware
5. update Makefile: add air, swagger, codegin and so on
6. mysql & redis connection pool

Signed-off-by: xiexianbin <me@xiexianbin.cn>

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,11 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .DS_Store
-bin/
 .history/
 .lh
 .idea/
-vendor/
 *.log
+bin/
+testdata/
+tmp/
+vendor/
